<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SelectorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/demo_seletor_A"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_a_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_B"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_b_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_C"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_c_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_D"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_d_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_E"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_e_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_F"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_f_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_G"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_g_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_H"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/demo_h_config"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_I"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/auth_mode"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/demo_seletor_J"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_weight="1"
            android:background="@drawable/login_demo_auth_bt"
            android:text="@string/debug_mode"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>