<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_demo_countdown_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_demo_time_bg"
            android:layout_margin="15dp"
            android:padding="5dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/time_skip_tv"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/login_dmeo_home_first"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@mipmap/login_demo_home_bg"
            android:orientation="vertical">

            <!--     <ImageView
                     android:layout_width="67dp"
                     android:layout_height="28dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="39dp"
                     android:src="@drawable/login_demo_logo" />-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:src="@mipmap/login_dmeo_home_scence" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="23dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/home_tv1"
                    android:textColor="#495170"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/home_tv2"
                    android:textColor="#495170"
                    android:textSize="30sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
